# fodinha-api

./: AGENTS.md  Cargo.toml  Dockerfile  GLOSSARY.md  build.rs  compose.dev.yml  compose.yml  config.json  docker-compose.yml  fly.toml
.github/workflows/: fly-deploy.yml
api/: Cargo.toml  Dockerfile
api/src/: lib.rs  main.rs
api/src/infra/: auth.rs  game.rs  mod.rs
api/src/services/: manager.rs  mod.rs
api/tests/: int_test.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/src/client/: game.rs  http.rs  mod.rs  ws.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: infra.rs  lib.rs  services.rs
crates/core/src/models/: commands.rs  id.rs  mod.rs
crates/core/src/models/game/: fodinha_classic.rs  fodinha_core.rs  fodinha_power.rs  mod.rs
crates/core/src/models/game/power_lua/: api.rs  definitions.rs  lua_codegen.rs  mod.rs  runtime.rs
crates/loadtester/: Cargo.toml
crates/loadtester/src/: main.rs
crates/lua-api-derive/: Cargo.toml
crates/lua-api-derive/src/: lib.rs
crates/power-lua-api/: Cargo.toml
crates/power-lua-api/src/: generate.rs  lib.rs  metadata.rs
docs/power_cards/: heal_10.lua  strike_10.lua
monitoring/: README.md  fly-grafana-dashboard.json
monitoring/local/: grafana-dashboards.yml  grafana-datasource.yml  prometheus.yml
scripts/: clean_test_db.js  import-grafana-dashboard.mjs
src/: api.rs  lib.rs  main.rs  ssh.rs
src/client/: game.rs  http.rs  mod.rs  ws.rs
src/infra/: auth.rs  game.rs  lobby.rs  mod.rs  telemetry.rs
src/infra/api/: auth.rs  card_definitions.rs  game.rs  lobby.rs  lua_resources.rs  mercenaries.rs  mod.rs  models.rs  stats.rs
src/infra/repositories/: card_decks.rs  card_definitions.rs  matches.rs  mercenaries.rs
src/infra/ssh/: app.rs  backend.rs  mod.rs
src/models/: commands.rs  game.rs  id.rs  lobby.rs  mod.rs  util.rs
src/models/game/: bidding.rs  data.rs  dealing.rs  fodinha_classic.rs  fodinha_power.rs  mod.rs  power_lua.rs
src/models/game/power_cards/: heal_10.lua  strike_10.lua
src/models/game/power_lua/: api.rs  definitions.rs  lua_codegen.rs  mod.rs  runtime.rs
src/services/: card_definitions.rs  dispatcher.rs  lobby.rs  manager.rs  mercenaries.rs  mod.rs  object_storage.rs  tasks.rs
src/services/matches/: actor.rs  manager.rs  message.rs  mod.rs  projection.rs  registry.rs
src/services/repositories/: card_decks.rs  card_definitions.rs  game.rs  matches.rs  mercenaries.rs  mod.rs  stats.rs  users.rs
src/services/stats/: mod.rs  projection.rs  projector.rs
src/ssh/: app.rs  backend.rs  mod.rs
tests/: int_test.rs
