[workspace]
members = [
    ".",
    "crates/core",
    "crates/client",
    "crates/loadtester",
    "crates/lua-api-derive",
]
resolver = "3"

[package]
name = "fodinha-api"
version = "0.1.0"
edition = "2024"
default-run = "fodinha-api"

[dependencies]
fodinha-core = { path = "crates/core" }
axum = { version = "0.8.9", features = ["ws", "multipart"] }
tower-http = { version = "0.7.0", features = ["trace", "cors"] }
aws-sdk-s3 = "1.115.0"

tokio = { version = "1.52.3", features = ["rt-multi-thread", "signal"] }
futures = "0.3.32"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-opentelemetry = "0.33.0"
opentelemetry = { version = "0.32.0", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.32.1", features = ["metrics", "rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["http-proto", "metrics", "reqwest-client", "reqwest-rustls", "trace"] }
opentelemetry-prometheus = "0.32.0"
prometheus = "0.14.0"

thiserror = "2.0.18"

serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"

mongodb = "3.7.0"

chrono = { version = "0.4.45", features = ["serde"] }

dotenv = "0.15"

strum = "0.28.0"
strum_macros = "0.28.0"

rand = "0.10.1"

reqwest = { version = "0.13.4", features = [ "json", "rustls" ], default-features = false }

jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"], default-features = false }

indexmap = { version = "2.14", features = ["serde"] }
dashmap = "6.2.1"

nanoid = "0.5.0"

config = "0.15.24"
base64 = "0.22.1"
sha2 = "0.10.9"

flume = { version = "0.12.0", features = ["async"] }

tokio-tungstenite = "0.29.0"

[build-dependencies]
fodinha-core = { path = "crates/core" }

[[bin]]
name = "fodinha-api"
path = "src/main.rs"
