[package]
name = "fodinha-client"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
fodinha-core = { path = "../core" }
futures = "0.3.32"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["time", "net"] }
tokio-tungstenite = "0.29.0"

