[package]
name = "fodinha-core"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = { version = "2.14", features = ["serde"] }
mlua = { version = "0.12.0", features = ["lua54", "vendored", "error-send"] }
mongodb = "3.7.0"
nanoid = "0.5.0"
power-lua-api = { path = "../power-lua-api" }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
tracing = "0.1.44"

[build-dependencies]
power-lua-api = { path = "../power-lua-api" }
