[package]
name = "fodinha-core"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = { version = "2.14", features = ["serde"] }
linkme = "0.3.36"
lua-api-derive = { path = "../lua-api-derive" }
mlua-extras = { version = "11.6.2", features = ["mlua", "lua54", "vendored", "error-send", "macros"] }
mongodb = "3.7.0"
nanoid = "0.5.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
tracing = "0.1.44"
