[package]
name = "fodinha-loadtester"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
fodinha-client = { path = "../client" }
fodinha-core = { path = "../core" }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }

[[bin]]
name = "loadtester"
path = "src/main.rs"

